@@ -292,17 +292,9 @@ end)
 
 -- Blueprint support: Store configuration in blueprint tags
 script.on_event(defines.events.on_player_setup_blueprint, function(event)
-    local player = game.get_player(event.player_index)
-    if not player then return end
-
-    -- Get blueprint (prefer blueprint_to_setup for this event)
-    local blueprint = player.blueprint_to_setup
-    if not blueprint or not blueprint.valid_for_read then
-        blueprint = player.cursor_stack
-        if not blueprint or not blueprint.valid_for_read or not blueprint.is_blueprint then
-            return
-        end
-    end
+    -- Get the blueprint item stack
+    local blueprint = event.record or event.stack
+    if not blueprint then return end
 
     -- Get the mapping (CRITICAL: provides blueprint_index -> real_entity mapping)
     local mapping = event.mapping.get()
